--- a/index.html
+++ b/index.html
@@ -72,7 +72,15 @@
                             <span class="content__subtitle">Technology, Interface Design</span>
                             <h3 class="content__title">Using UX Design to Build a Sustainable Future</h3>
                             <span class="content__date">6 May, 2020</span>
-                            <p class="content__text">Transformation has to be driven by everybody, not just by climate groups, and we have a responsibility to use our influence to drive this.</p>
+                            <p class="content__text">
+                                <span class="content__text">Transformation has to be driven by everybody, not just by climate groups, and we have a responsibility to use our influence to drive this.</span>
+                                <button class="content__arrow arrow arrow--read">
+                                    <span>read more</span>
+                                    <svg class="icon">
+                                        <use xlink:href="./img/sprite.svg#arrow"></use>
+                                    </svg>
+                                </button>
+                            </p>
                         </div>
                         <picture class="blog__image image">
                             <source srcset="./img/mobile/image2.webp, ./img/mobile/image2@2x.webp 2x, ./img/mobile/image2@3x.webp 3x" media="(max-width: 767px)">
@@ -86,7 +94,15 @@
                             <span class="content__subtitle">Technology, Interface Design</span>
                             <h3 class="content__title">Using UX Design to Build a Sustainable Future</h3>
                             <span class="content__date">6 May, 2020</span>
-                            <p class="content__text">Transformation has to be driven by everybody, not just by climate groups, and we have a responsibility to use our influence to drive this.</p>
+                            <p class="content__text">
+                                <span>Transformation has to be driven by everybody, not just by climate groups, and we have a responsibility to use our influence to drive this.</span>
+                                <button class="content__arrow arrow arrow--read">
+                                    <span>read more</span>
+                                    <svg class="icon">
+                                        <use xlink:href="./img/sprite.svg#arrow"></use>
+                                    </svg>
+                                </button>
+                            </p>
                         </div>
                         <picture class="blog__image image">
                             <source srcset="./img/mobile/image3.webp, ./img/mobile/image3@2x.webp 2x, ./img/mobile/image3@3x.webp 3x" media="(max-width: 767px)">
@@ -103,7 +119,7 @@
             <div class="container">
                 <div class="posts__wrapper wrapper wrapper--top">
                     <h3 class="posts__title title-2">Latest Posts</h3>
-                    <button class="posts__arrow  arrow arrow-view">
+                    <button class="posts__arrow  arrow arrow--view">
                         View All
                         <svg class="icon">
                             <use xlink:href="./img/sprite.svg#arrow"></use>
@@ -169,7 +185,7 @@
             <div class="container">
                 <div class="popular__wrapper wrapper wrapper--top">
                     <h3 class="popular__title title-2">The Most Popular</h3>
-                    <button class="popular__arrow arrow arrow-view">
+                    <button class="popular__arrow arrow arrow--view">
                         View All
                         <svg class="icon">
                             <use xlink:href="./img/sprite.svg#arrow"></use>
@@ -222,7 +238,8 @@
                         <br>
                         Head of Design at VeronaLabs.com
                     </h5>
-                    <button class="info__arrow arrow" aria-label="read more">
+                    <button class="info__arrow arrow arrow--read">
+                        <span>read more</span>
                         <svg class="icon">
                             <use xlink:href="./img/sprite.svg#arrow"></use>
                         </svg>
