--- a/index.html
+++ b/index.html
@@ -58,8 +58,11 @@
         <!-- section-hero -->
         <section class="hero">
             <div class="container">
-                <h2 class="hero__title">Manifest is a newborn theme.</h2>
-                <h2 class="hero__title">Clean, simple and fast.</h2>
+                <div hero__block>
+                    <h2 class="hero__title">Manifest is a newborn theme.</h2>
+                    <h2 class="hero__title">Clean, simple and fast.</h2>
+                </div>
+                
             </div>
         </section>
         <!-- section-blog -->
